# decay

./: .gitignore  Cargo.toml  LICENSE  README.md
promo/: index.html
src/: cli.rs  db.rs  export.rs  main.rs  predict.rs  scheduler.rs
src/collector/: battery.rs  benchmark.rs  mod.rs  ssd.rs  temperature.rs
src/display/: chart.rs  history.rs  mod.rs  summary.rs
