[package]
name = "decay"
version = "0.1.0"
edition = "2024"
description = "Are you riding your Mac until the wheels fall off? Track SSD wear & battery decay over time."
license = "MIT"
repository = "https://github.com/somanshreddy/decay"
keywords = ["macos", "ssd", "battery", "health", "smart"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
